[Local Category] Fix alignment icon sub row

--- a/assets/_local_category.scss
+++ b/assets/_local_category.scss
@@ -82,8 +82,7 @@
   .caret-grey {
     font-size: 18px;
     color:  $color-grey;
-    padding-left: 9px;
-    padding-right:  8px;
+    margin-right: 6px;
   }
 
   .icon-size-20 {
